# nomi

./: .coverctl.yaml  .golangci.yml  .nox.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml  e2e-mnemos.yml  release.yml
.nox/: baseline.json
.roady/: events.jsonl  plan.json  spec.lock.json  spec.yaml  state.json
app/: index.html  package-lock.json  package.json  playwright.config.ts
app/e2e/: builder-flows.spec.ts  connection-and-edit.spec.ts  global-setup.mts  governance.spec.ts  mnemos-plugin.spec.ts  operations.spec.ts  permissions.spec.ts  plan-review.spec.ts  ui-flows.spec.ts
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
cmd/migrate/: main.go
cmd/nomi/: client.go  cmd_config.go  cmd_list.go  cmd_memory.go  cmd_seed.go  cmd_tail.go  main.go
cmd/nomi-publish/: main.go
cmd/nomid/: main.go  main_test.go
cmd/test-pack-bundle/: main.go
docs/: architecture.md  backlog.md  comparison.md  context-budget.md  development-process.md  headless.md  index.html  site.css  site.js  vendor-notes.md
docs/adr/: 0004-nomi-mnemos-cognitive-boundary.md  0005-memstore-typed-boundary.md
docs/launch/: hn-faq.md
examples/: README.md
examples/code-reviewer/: README.md  seed.yaml
examples/coding-agent/: README.md  seed.yaml
examples/inbox-triage/: README.md  seed.yaml
examples/research-assistant/: README.md  (+1 more)
scoop-bucket/: README.md
templates/: built-in.json  builtin.go  builtin_test.go  templates_test.go
(+358 files in other folders)
